index.js updated first time

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,11 +10,12 @@ pipeline {
             steps {
                 script {
                     sh """
-                        commit_hash=$(git rev-parse --short HEAD)
-                        tag_name=dev.${commit_hash}
-                        version=$(cat package.json | grep version | head -1 | awk -F: '{print $2}' | sed 's/[",]//g')
-                        release-it --increment=${params.INCREMENT_TYPE} --release-version=$version
-                        release-it --no-npm --ci --git.tagName=${version}.$tag_name
+                        set -e
+                        commit_hash=\$(git rev-parse --short HEAD)
+                        tag_name="dev.\${commit_hash}"
+                        version=\$(jq -r '.version' package.json)
+                        release-it --increment=\${INCREMENT_TYPE} --release-version=\$version
+                        release-it --no-npm --ci --git.tagName=\${version}.\$tag_name
                     """
                 }
             }
