--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             steps {
                 script {
                     // Install jq
-                    sh "apt-get update && apt-get install -y jq"
+                    sh "sudo apt install -y jq"
 
                     // Set up variables
                     def commit_hash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
